--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
     /*Chamando a fonte*/
     font-family: "Oswald", sans-serif;
-    font-size: 12px;
+    font-size: 0.85rem; /*REM é o nosso padrão (regras atuais)*/
 
     /*Bordas View*/
     border: solid 1px #000;
